--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,16 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.9.2</version>
     </dependency>
+      <dependency>
+          <groupId>com.zaxxer</groupId>
+          <artifactId>HikariCP-java7</artifactId>
+          <version>2.4.13</version>
+      </dependency>
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>6.0.6</version>
+      </dependency>
   </dependencies>
   <build>
     <finalName>ushankashop</finalName>
