--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,16 @@
           <artifactId>spring-orm</artifactId>
           <version>4.3.12.RELEASE</version>
       </dependency>
+      <dependency>
+          <groupId>org.springframework.security</groupId>
+          <artifactId>spring-security-web</artifactId>
+          <version>4.0.1.RELEASE</version>
+      </dependency>
+      <dependency>
+          <groupId>org.springframework.security</groupId>
+          <artifactId>spring-security-config</artifactId>
+          <version>4.0.1.RELEASE</version>
+      </dependency>
   </dependencies>
   <build>
     <finalName>ushankashop</finalName>
