--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,11 @@
           <artifactId>spring-security-config</artifactId>
           <version>4.0.1.RELEASE</version>
       </dependency>
+      <dependency>
+          <groupId>org.springframework.security.oauth</groupId>
+          <artifactId>spring-security-oauth2</artifactId>
+          <version>2.0.3.RELEASE</version>
+      </dependency>
   </dependencies>
   <build>
     <finalName>ushankashop</finalName>
